Fixing issue with continuous updating of couplings and removing some warning nags